--- a/app/src/main/res/layout/activity_my_lan_details.xml
+++ b/app/src/main/res/layout/activity_my_lan_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_my_lan_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,15 +14,19 @@
         android:id="@+id/include" />
     <TextView
         android:id="@+id/banner_organizer"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="80dp"
         android:text="Infos organisateur"
-        android:padding="15dp"
+        style="@style/LanDetails"
+        android:padding="10dp"
+        android:layout_marginStart="10dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="wrap_content" />
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/owner_circle_pp"
         android:layout_below="@id/banner_organizer"
         android:background="@drawable/amumu460"
+        app:civ_border_color="@android:color/black"
+        app:civ_border_width="1dp"
         android:layout_margin="15dp"
         android:layout_width="50dp"
         android:layout_height="50dp" />
@@ -48,18 +53,21 @@
         android:layout_height="1dip"
         android:background="@color/password_toggle" />
     <TextView
-        android:id="@+id/banner_date"
-        android:layout_below="@id/divider1"
-        android:padding="15dp"
-        android:text="Infos date"
+        android:id="@+id/banner_infos"
+        android:padding="10dp"
+        android:text="Infos"
+        style="@style/LanDetails"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/divider1"
+        android:layout_alignStart="@id/banner_organizer" />
 
     <TextView
         android:id="@+id/event_date"
-        android:layout_below="@id/banner_date"
+        android:layout_below="@id/banner_infos"
         android:text="23 JAN 2017"
         android:layout_marginStart="20dp"
+        android:layout_alignStart="@id/banner_organizer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <ImageView
@@ -68,6 +76,8 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@id/banner_organizer"
+        android:backgroundTint="@android:color/holo_green_light"
         android:layout_below="@+id/event_date"
         android:background="@drawable/ic_cardview_time" />
     <TextView
@@ -86,6 +96,7 @@
         android:layout_below="@id/circle1"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
+        android:layout_alignStart="@id/banner_organizer"
         android:background="@drawable/ic_dots_24dp" />
 
     <ImageView
@@ -96,6 +107,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dot"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:layout_alignStart="@id/banner_organizer"
         android:background="@drawable/ic_cardview_time" />
 
     <TextView
@@ -122,5 +135,15 @@
         android:layout_alignBottom="@+id/include"
         android:layout_alignParentStart="true"
         android:layout_marginStart="7dp" />
+
+    <TextView
+        android:id="@+id/banner_participants"
+        android:layout_below="@id/divider2"
+        android:layout_alignStart="@id/banner_organizer"
+        android:padding="10dp"
+        style="@style/LanDetails"
+        android:text="Participants"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
