--- a/app/src/main/res/layout/activity_my_lan_details.xml
+++ b/app/src/main/res/layout/activity_my_lan_details.xml
@@ -127,15 +127,6 @@
         android:layout_height="1dip"
         android:background="@color/password_toggle" />
 
-    <Button
-        android:id="@+id/button_delete"
-        android:text="DELETE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/include"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="7dp" />
-
     <TextView
         android:id="@+id/banner_participants"
         android:layout_below="@id/divider2"
@@ -145,5 +136,19 @@
         android:text="Participants"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/listview_participants"
+        android:layout_below="@id/banner_participants"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
+    <Button
+        android:id="@+id/button_delete"
+        android:text="DELETE"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/listview_participants"/>
 </RelativeLayout>
