--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="buttonLoginColor">#7986cb</color>
+    <color name="buttonLoginColor">#7986CB</color>
+    <color name="material_indigo_500">#3F51B5</color>
     <color name="textButtonLoginColor">#FFFFFF</color>
     <color name="accent">#55C5C5C5</color>
     <color name="textViews">#383a3b</color>
