--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,8 @@
     <color name="light_grey">#dfdede</color>
     <color name="pressed_state">#dcdbdb</color>
     <color name="tab_background">#9fa8da</color>
-    <color name="banner_details">#00c853</color>
+    <color name="circle_start">#4fca82</color>
+    <color name="circle_end">#d32f2f</color>
     <!-- Nav Drawer style-->
     <color name="nav_header">#5c6bc0</color>
     <color name="color_navigation_list_background">#ffffff</color>
