--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,18 +16,12 @@
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+        </RelativeLayout>
 
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.design.widget.AppBarLayout
+    <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="21dp"
             android:fitsSystemWindows="true"
             android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -36,68 +30,72 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:visibility="gone"
+                app:layout_scrollFlags="enterAlways|scroll"
                 android:background="@color/buttonLoginColor"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="pin" />
         </android.support.design.widget.AppBarLayout>
-    </LinearLayout>
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/bottom_sheet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        app:behavior_hideable="true"
-        app:behavior_peekHeight="0dp"
-        app:layout_behavior="@string/bottom_sheet_behavior">
 
-        <RelativeLayout
-            android:id="@+id/bottom_sheet_relative_layout"
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/bottom_sheet"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circle_picture"
-                android:src="@mipmap/login_background"
-                android:layout_margin="10dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
-            <TextView
-                android:id="@+id/name_bottom_sheet"
-                android:layout_toEndOf="@id/circle_picture"
-                android:text="Title"
-                android:textColor="@color/buttonLoginColor"
-                android:layout_margin="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/address_bottom_sheet"
-                android:layout_below="@id/name_bottom_sheet"
-                android:layout_toEndOf="@id/circle_picture"
-                android:layout_marginStart="10dp"
-                android:textColor="@color/btn_create"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            app:behavior_hideable="true"
+            app:behavior_peekHeight="0dp"
+            app:anchorPoint="200dp"
+            app:layout_behavior="@string/BottomSheetBehaviorGoogleMapsLike">
 
-            <LinearLayout
-                android:layout_below="@id/circle_picture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/bottom_sheet_relative_layout"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:orientation="vertical">
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/circle_picture"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:src="@mipmap/login_background" />
+
+                <TextView
+                    android:id="@+id/name_bottom_sheet"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:layout_margin="5dp"
-                    app:cardCornerRadius="2dp">
+                    android:layout_margin="10dp"
+                    android:layout_toEndOf="@id/circle_picture"
+                    android:text="Title"
+                    android:textColor="@color/buttonLoginColor" />
 
-                </android.support.v7.widget.CardView>
-            </LinearLayout>
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/address_bottom_sheet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/name_bottom_sheet"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@id/circle_picture"
+                    android:text=""
+                    android:textColor="@color/btn_create" />
 
-    </android.support.v4.widget.NestedScrollView>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/circle_picture">
 
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        app:cardCornerRadius="2dp">
+
+                    </android.support.v7.widget.CardView>
+                </LinearLayout>
+            </RelativeLayout>
+
+        </android.support.v4.widget.NestedScrollView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab2"
         android:layout_width="wrap_content"
@@ -120,4 +118,30 @@
         app:layout_anchor="@id/fab2"
         app:layout_anchorGravity="top"/>
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/merged_appbarlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:tag="modal-appbar"
+        app:layout_behavior="@string/MergedAppBarLayoutBehavior">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <View
+                android:id="@+id/background"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@color/colorPrimary"
+                android:layout_gravity="bottom"/>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/expanded_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:title="HELLO"
+                app:navigationIcon="@drawable/ic_settings"/>
+        </FrameLayout>
+    </android.support.design.widget.AppBarLayout>
 </android.support.design.widget.CoordinatorLayout>
